feat: Support updata subscribe by hours

--- a/luci-app-daed-next/po/zh_Hans/daed-next.po
+++ b/luci-app-daed-next/po/zh_Hans/daed-next.po
@@ -64,11 +64,8 @@ msgstr "请先启动 DAE-WING 和 仪表板 服务后重试"
 msgid "Enable Auto Subscribe Update"
 msgstr "启用订阅自动更新"
 
-msgid "Update Cycle"
-msgstr "更新周期"
-
-msgid "Update Time (Every Day)"
-msgstr "更新时间（每天）"
+msgid "Update Cycle(By hours)"
+msgstr "更新周期(按小时)"
 
 msgid "Username"
 msgstr "用户名"
